--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: [Multicellular Systems and Engineering Lab]
-description: [This is a code repository for the manuscript titled: From spikes to intercellular waves: tuning intercellular Ca2+ signaling dynamics modulates organ size control.]
+title: Multicellular Systems and Engineering Lab
+description: This is a code repository for the manuscript titled: From spikes to intercellular waves: tuning intercellular Ca2+ signaling dynamics modulates organ size control.
 theme: jekyll-theme-cayman
