--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Multicellular Systems and Engineering Lab
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
