--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Multicellular Systems and Engineering Lab
-description: 
+description: From spikes to intercellular waves: tuning intercellular Ca2+ signaling dynamics modulates organ size control.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
